# evoc

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
eca/: __init__.py  __main__.py  core.py  evolution.py  profiler.py
eca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: example.py  example.py.eca_backup  example.py.eca_ea_best.py
tests/: test_example.py
